# advent-of-code

./: advent.cabal  default.nix
app/: Main.hs
data/: Day10.txt
src/: Day1.hs
src/Advent/: Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day16.hs  Day17.hs  Day18.hs  Day19.hs  Day2.hs  Day20.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  Prelude.hs
