cabal-version:      3.4
name:               advent
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             jerbaroo
maintainer:         jerbaroo.work@pm.me
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Advent.Day1,
                      Advent.Day2,
                      Advent.Day3,
                      Advent.Day4,
                      Advent.Day5,
                      Advent.Day6,
                      Advent.Day7,
                      Advent.Day8,
                      Advent.Day9,
                      Advent.Prelude
    build-depends:    array,
                      async,
                      base,
                      containers,
                      extra,
                      from-sum,
                      megaparsec,
                      MissingH,
                      mtl,
                      safe,
                      text,
                      transformers,
                      unliftio,
                      vector,
                      witch
    hs-source-dirs:   src
    default-language: GHC2021
    default-extensions:
                      BlockArguments,
                      LambdaCase,
                      OverloadedRecordDot

executable advent
    import:           warnings
    main-is:          Main.hs
    build-depends:    advent,
                      base
    hs-source-dirs:   app
    default-language: GHC2021
    ghc-options: -threaded -rtsopts

test-suite advent-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    advent,
                      base
